updated integration and unit tests